--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body,html{
     font-size:100px;
     height:100%;
     overflow:hidden;
-	background: linear-gradient(-45deg, #ee7752, #641a36, #073c50, #1e5f50);
+	background: linear-gradient(-90deg, #000000, #ffffff);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
