--- a/css/index.css
+++ b/css/index.css
@@ -1,96 +1,218 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+html,body {
 
-body,html{
-    text-align:center;
-    font-family:'Raleway';
-    color:white;
-    font-size:100px;
-    height:100%;
-    overflow:hidden;
-	background: linear-gradient(-90deg, #000000, #ffffff);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+    background: rgb(30,30,30);
+
+    background: linear-gradient(120deg, rgba(30,30,30,1) 0%, rgba(20,20,20,1) 100%);
+
 }
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+
+
+.seller {
+
+    font-family: monospace;
+
+    color: #444;
+
+
+
+    cursor: text;
+
 }
 
-.main {
-    height: 200px;
-    width: 400px;
+
+
+.holder {
+
+    display: flex;
+
+    flex-direction: row;
+
+    flex-wrap: wrap;
+
+    justify-content: center;
+
+}
+
+
+
+.center {
 
     position: fixed;
+
     top: 50%;
+
     left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
 
-    background-color: rgba(0,0,0,0.8);
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.links {
-    height: 200px;
-    font-size:25px;
-    width:400px;
-    position:fixed;
-    top:50%;
-    left:50%;
-    margin-top: 5px;
-    margin-left: -330px;
+    transform: translate(-50%, -50%);
 
 }
 
-.links2 {
-    height: 200px;
-    font-size:25px;
-    width:400px;
-    position:fixed;
-    top:50%;
-    left:50%;
-    margin-top: 30px;
-    margin-left: -200px;
-}
 
-.links23 {
-    height: 200px;
-    font-size:25px;
-    width:400px;
-    position:fixed;
-    top:50%;
-    left:50%;
-    margin-top: 35px;
-    margin-left: -200px;
+
+.textiboi {
+
+	text-align: center;
+
+	color: #444;
+
+	font-family: monospace;
 
 }
 
-a{
+
+
+.textiboi:hover {
+
+	color: white;
+
+}
+
+	
+
+
+
+.header {
+
+    text-align: center;
+
+    color: #444;
+
+    font-family: monospace;
+
+}
+
+
+
+.header a {
+
     text-decoration: none;
-    color:white;
+
 }
 
-ul{
-    height: 200px;
-    font-size:25px;
-    width:400px;
-    position:fixed;
-    top:50%;
-    left:50%;
-    margin-top: 5px;
-    margin-left: -250px;
-    padding-left:50px;
+
+
+.hoverr:hover a 
+
+{
+
+	color: white;
+
 }
 
-a:hover{
-    color:rgb(148, 42, 42);
+
+
+.header:hover {
+
+    text-align: center;
+
+    color: white;
+
+    font-family: monospace;
+
 }
+
+
+
+.container:hover .seller {
+
+    color: white;
+
+}
+
+
+
+.container:hover a {
+
+    color: white;
+
+}
+
+
+
+.a {
+
+    text-align: center;
+
+    color: white;
+
+    font-family: monospace;
+
+}
+
+
+
+.header:hover a {
+
+    text-align: center;
+
+    color: white;
+
+    font-family: monospace;
+
+}
+
+
+
+.icon {
+
+    color: #444;
+
+}
+
+
+
+.icon i {
+
+    font-size: 80px;
+
+}
+
+
+
+.container {
+
+    text-align: center;
+
+    margin: 5px 20px;
+
+
+
+    float: left;
+
+}
+
+
+
+a {
+
+    color: #444;
+
+}
+
+
+
+.container:hover .icon {
+
+    color: var(--icon-color);
+
+    font-size: 20px;
+
+}
+
+
+
+.container:hover .seller {
+
+    color: white;
+
+}
+
+
+
+.container:hover a {
+
+    color: white;
+
+}
+
