--- a/css/index.css
+++ b/css/index.css
@@ -1,218 +1,96 @@
-html,body {
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
-    background: rgb(30,30,30);
-
-    background: linear-gradient(120deg, rgba(30,30,30,1) 0%, rgba(20,20,20,1) 100%);
-
+body,html{
+    text-align:center;
+    font-family:'Raleway';
+    color:white;
+    font-size:100px;
+    height:100%;
+    overflow:hidden;
+	background: linear-gradient(-90deg, #000000, #ffffff);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
 
-
-
-.seller {
-
-    font-family: monospace;
-
-    color: #444;
-
-
-
-    cursor: text;
-
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
-
-
-.holder {
-
-    display: flex;
-
-    flex-direction: row;
-
-    flex-wrap: wrap;
-
-    justify-content: center;
-
-}
-
-
-
-.center {
+.main {
+    height: 200px;
+    width: 400px;
 
     position: fixed;
-
     top: 50%;
-
     left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
 
-    transform: translate(-50%, -50%);
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.links {
+    height: 200px;
+    font-size:25px;
+    width:400px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    margin-top: 5px;
+    margin-left: -330px;
 
 }
 
+.links2 {
+    height: 200px;
+    font-size:25px;
+    width:400px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    margin-top: 30px;
+    margin-left: -200px;
+}
 
-
-.textiboi {
-
-	text-align: center;
-
-	color: #444;
-
-	font-family: monospace;
+.links3 {
+    height: 200px;
+    font-size:25px;
+    width:400px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    margin-top: 35px;
+    margin-left: -200px;
 
 }
 
-
-
-.textiboi:hover {
-
-	color: white;
-
-}
-
-	
-
-
-
-.header {
-
-    text-align: center;
-
-    color: #444;
-
-    font-family: monospace;
-
-}
-
-
-
-.header a {
-
+a{
     text-decoration: none;
-
+    color:white;
 }
 
-
-
-.hoverr:hover a 
-
-{
-
-	color: white;
-
+ul{
+    height: 200px;
+    font-size:25px;
+    width:400px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    margin-top: 5px;
+    margin-left: -250px;
+    padding-left:50px;
 }
 
-
-
-.header:hover {
-
-    text-align: center;
-
-    color: white;
-
-    font-family: monospace;
-
+a:hover{
+    color:rgb(148, 42, 42);
 }
-
-
-
-.container:hover .seller {
-
-    color: white;
-
-}
-
-
-
-.container:hover a {
-
-    color: white;
-
-}
-
-
-
-.a {
-
-    text-align: center;
-
-    color: white;
-
-    font-family: monospace;
-
-}
-
-
-
-.header:hover a {
-
-    text-align: center;
-
-    color: white;
-
-    font-family: monospace;
-
-}
-
-
-
-.icon {
-
-    color: #444;
-
-}
-
-
-
-.icon i {
-
-    font-size: 80px;
-
-}
-
-
-
-.container {
-
-    text-align: center;
-
-    margin: 5px 20px;
-
-
-
-    float: left;
-
-}
-
-
-
-a {
-
-    color: #444;
-
-}
-
-
-
-.container:hover .icon {
-
-    color: var(--icon-color);
-
-    font-size: 20px;
-
-}
-
-
-
-.container:hover .seller {
-
-    color: white;
-
-}
-
-
-
-.container:hover a {
-
-    color: white;
-
-}
-
