--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,9 @@ body,html{
     font-size:100px;
     height:100%;
     overflow:hidden;
-	background: linear-gradient(-90deg, #000000, #ffffff);
+	background: linear-gradient(-90deg, #000000, #777777);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 15s ease-out infinite;
 }
 
 @keyframes gradient {
@@ -25,12 +25,12 @@ body,html{
 }
 
 .main {
-    height: 200px;
+    height: 1000px;
     width: 400px;
 
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 10%;
+    left: 12%;
     margin-top: -100px;
     margin-left: -200px;
 
@@ -44,8 +44,8 @@ body,html{
     font-size:25px;
     width:400px;
     position:fixed;
-    top:50%;
-    left:50%;
+    top: 10%;
+    left: 12%;
     margin-top: 5px;
     margin-left: -330px;
 
@@ -56,8 +56,8 @@ body,html{
     font-size:25px;
     width:400px;
     position:fixed;
-    top:50%;
-    left:50%;
+    top:30%;
+    left:12%;
     margin-top: 30px;
     margin-left: -200px;
 }
@@ -67,8 +67,8 @@ body,html{
     font-size:25px;
     width:400px;
     position:fixed;
-    top:50%;
-    left:50%;
+    top:20%;
+    left:12%;
     margin-top: 35px;
     margin-left: -200px;
 
@@ -84,13 +84,13 @@ ul{
     font-size:25px;
     width:400px;
     position:fixed;
-    top:50%;
-    left:50%;
+    top:20%;
+    left:12%;
     margin-top: 5px;
     margin-left: -250px;
     padding-left:50px;
 }
 
 a:hover{
-    color:rgb(148, 42, 42);
+    color:rgb(162 162 162);
 }
