--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ body,html{
 	}
 }
 
+
 .main {
     height: 1000px;
     width: 400px;
@@ -51,16 +52,28 @@ body,html{
 
 }
 
-.links2 {
-    height: 200px;
-    font-size:25px;
-    width:400px;
-    position:fixed;
-    top:10%;
-    left:10%;
-    margin-top: 30px;
-    margin-left: -200px;
-}
+.links2 h1 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid white; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 .links3 {
     height: 200px;
