links2 css edit

--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ body,html{
 
 }
 
-.links2 h1 {
+.links2 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid white; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
